{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 456,
  "lineage": "ff4a1533-ff0b-5eec-3737-d242f52b1840",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "rbs",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/regions/northamerica-northeast1/instanceGroups/apache-rmig",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2019-08-19T11:59:46.981-07:00",
            "enable_cdn": false,
            "fingerprint": "JQ_ne9eSCJw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/httpHealthChecks/apache-healthcheck"
            ],
            "id": "http-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-backend",
            "port_name": "http",
            "project": "polar-processor-228413",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/backendServices/http-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "depends_on": [
            "google_compute_http_health_check.default",
            "google_compute_region_instance_group_manager.rmig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-08-19T11:59:14.392-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-http-https",
            "name": "default-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/networks/default",
            "priority": 1000,
            "project": "polar-processor-228413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/firewalls/default-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "gfr",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "website-forwarding-rule",
            "ip_address": "34.96.104.239",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "website-forwarding-rule",
            "port_range": "80-80",
            "project": "polar-processor-228413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/forwardingRules/website-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/targetHttpProxies/http-proxy"
          },
          "depends_on": [
            "google_compute_target_http_proxy.thp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "thp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-08-19T11:59:58.123-07:00",
            "id": "http-proxy",
            "name": "http-proxy",
            "project": "polar-processor-228413",
            "proxy_id": 4398164088047750977,
            "self_link": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/urlMaps/http-lb-url-map"
          },
          "depends_on": [
            "google_compute_url_map.urlmap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-08-19T11:59:54.591-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/backendServices/http-backend",
            "description": "",
            "fingerprint": "isw2MJPkzfw=",
            "host_rule": [],
            "id": "http-lb-url-map",
            "map_id": 463027872206376773,
            "name": "http-lb-url-map",
            "path_matcher": [],
            "project": "polar-processor-228413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/polar-processor-228413/global/urlMaps/http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_backend_service.rbs"
          ]
        }
      ]
    }
  ]
}